# cronguard

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cronguard/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
